--- a/css/tracmor.css
+++ b/css/tracmor.css
@@ -205,7 +205,7 @@ TH, TD, BODY { font: 10px verdana; text-align: left; }
 
 .login_header {
 	position:relative;
-	background-color:#102c3d;
+	background-color:#f7f7f7;
 	width:100%;
 	height:64px;
 }
